<?xml version="1.0" encoding="utf-8"?><resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yep</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_home">Yep</string>
    <string name="tab_title_chats">Chats</string>
    <string name="tab_title_friends">Friends</string>
    <string name="tab_title_explore">Explore</string>
    <string name="tab_title_my_profile">My Profile</string>
    <string name="title_activity_chat">Chat</string>
    <string name="sign_in">Sign In</string>
    <string name="label_master">Master</string>
    <string name="label_learning">Learning</string>
    <string name="icon">Icon</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="title_activity_user">User</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile_editor">ProfileEditorActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="suggestions">Suggestions</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_incorrect_password">Password incorrect</string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="finish">Finish</string>
    <string name="plus_symbol">+</string>
    <string name="phone_number">Phone number</string>
    <string name="unable_to_register">Unable to register</string>
    <string name="please_wait">Please wait</string>
    <string name="register_name_hint">What\'s your name?</string>
    <string name="register_verify_code_hint">Verify code</string>
    <string name="unable_to_verify_phone">Unable to verify phone</string>
    <string name="logout">Logout</string>
    <string name="no_introduction_yet">No introduction yet</string>
    <string name="nickname">Nickname</string>
    <string name="introduction">Introduction</string>
    <string name="skill">Skill</string>
    <string name="master">Master</string>
    <string name="learning">Learning</string>
    <string name="dribbble">Dribbble</string>
    <string name="github">Github</string>
    <string name="sign_in_to_provider_name">Sign in to <xliff:g id="name">%s</xliff:g></string>
    <string name="stars">Stars</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="instagram">Instagram</string>
    <string name="add">Add</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_skill">Add skill</string>
    <string name="say_hello">Say hello</string>
    <string name="unable_to_get_profile">Unable to get profile</string>
    <string name="logout_confirm_message">Are you sure to logout?</string>
    <string name="add_friend">Add friend</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="block_user">Block</string>
    <string name="report_user">Report</string>
    <string name="find_friend">Find friend</string>
    <string name="search_user">Search user</string>
</resources>
