<?xml version="1.0" encoding="utf-8"?><!--
  ~ Twidere - Twitter client for Android
  ~
  ~  Copyright (C) 2012-2014 Mariotaku Lee <mariotaku.lee@gmail.com>
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<catchla.yep.view.TintedStatusFrameLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:enabled="true"
    app:setPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.pkmmte.view.CircularImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/icon_size_account_info_edit_profile_image"
                android:layout_height="@dimen/icon_size_account_info_edit_profile_image"
                android:layout_marginTop="64dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="86"/>

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="13800138000"/>

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/element_spacing_large"
                android:layout_marginRight="@dimen/element_spacing_large"
                android:gravity="top"
                android:singleLine="true"
                app:met_floatingLabel="normal"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/nickname"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/element_spacing_large"
                android:layout_marginRight="@dimen/element_spacing_large"
                android:gravity="top"
                android:minLines="4"
                app:met_floatingLabel="normal"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/introduction"/>

            <Button
                android:id="@+id/logout"
                style="?buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/logout"/>
        </LinearLayout>

    </ScrollView>

</catchla.yep.view.TintedStatusFrameLayout>
